changed a function name
(Since I also changed the function name in the custom.js file)

--- a/signup.html
+++ b/signup.html
@@ -64,7 +64,7 @@
 			    				</div>
 			    			</div>
 
-                <a href="confirmation.html" class="btn btn-lg btn-primary btn-block" onclick="getNewDetails()" role="button">Register</a>
+                <a href="confirmation.html" class="btn btn-lg btn-primary btn-block" onclick="submitNewUser()" role="button">Register</a>
 
 			    		</form>
 			    	</div>
