--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
         <label for="inputPassword" class="sr-only">Password</label>
         <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
         <div class="checkbox">
-          <label>
+          <!-- <label>
             <input type="checkbox" class = "checkbox" value="remember-me"> Remember me
-          </label>
+          </label> -->
         </div>
         <a href="mainpage.html" class="btn btn-lg btn-primary btn-block" onclick="getAccountDetails()" role="button">Sign in </a>
         <a href="signup.html" class="btn btn-lg btn-primary btn-block" role="button">No account? Sign up</a>
