--- a/signup.html
+++ b/signup.html
@@ -34,24 +34,39 @@
 			 			</div>
 			 			<div class="panel-body">
 			    		<form role="form">
-			    			<div class="row">
+			    			<!-- <div class="row">
 			    				<div class="col-xs-6 col-sm-6 col-md-6">
 			    					<div class="form-group">
 			                <input type="text" name="username" id="username" class="form-control" placeholder="Username">
 			    					</div>
 			    				</div>
-			    				<!-- <div class="col-xs-6 col-sm-6 col-md-6">
+                  <div class="col-xs-6 col-sm-6 col-md-6">
+                    <div class="form-group">
+                      <input type="text" name="username" id="username" class="form-control" placeholder="Username">
+                    </div>
+                  </div>
+			    				<div class="col-xs-6 col-sm-6 col-md-6">
 			    					<div class="form-group">
 			    						<input type="text" name="last_name" id="last_name" class="form-control" placeholder="Last Name">
 			    					</div>
 			    				</div>
 			    			</div> -->
 
-			    			<!-- <div class="form-group">
-			    				<input type="email" name="email" id="email" class="form-control" placeholder="Email Address">
-			    			</div> -->
+			    			<div class="form-group">
+                  <label for="username">Choose a username:</label>
+			    				<input type="username" name="username" id="username" class="form-control" placeholder="Username">
+			    			</div>
+                <label for="password">Choose a password:</label>
+                <div class="form-group">
+			    				<input type="password" name="password" id="password" class="form-control" placeholder="Password">
+			    			</div>
+                <label for="password_confirmation">Confirm your password:</label>
+                <div class="form-group">
+                  <input type="password" name="password_confirmation" id="password_confirmation" class="form-control" placeholder="Confirm Password">
+                </div>
 
-			    			<div class="row">
+
+			    			<!-- <div class="row">
 			    				<div class="col-xs-6 col-sm-6 col-md-6">
 			    					<div class="form-group">
 			    						<input type="password" name="password" id="password" class="form-control" placeholder="Password">
@@ -62,7 +77,7 @@
 			    						<input type="password" name="password_confirmation" id="password_confirmation" class="form-control" placeholder="Confirm Password">
 			    					</div>
 			    				</div>
-			    			</div>
+			    			</div> -->
 
                 <a href="confirmation.html" class="btn btn-lg btn-primary btn-block" onclick="submitNewUser()" role="button">Register</a>
 
