--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 
       <form class="form-signin">
         <h2 class="form-signin-heading">The References Manager</h2>
-        <label for="inputEmail" class="sr-only">Email address</label>
-        <input type="email" id="inputEmail" required="true" class="form-control" placeholder="Email address" required autofocus>
+        <label for="inputUsername" class="sr-only">Username</label>
+        <input type="text" id="inputUsername" required="true" class="form-control" placeholder="Username" required autofocus>
         <label for="inputPassword" class="sr-only">Password</label>
         <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
         <div class="checkbox">
@@ -46,7 +46,7 @@
             <input type="checkbox" class = "checkbox" value="remember-me"> Remember me
           </label> -->
         </div>
-        <a href="mainpage.html" class="btn btn-lg btn-primary btn-block" onclick="getAccountDetails()" role="button">Sign in </a>
+        <a href="#" class="btn btn-lg btn-primary btn-block" role="button" id="SignInButton">Sign in </a>
         <a href="signup.html" class="btn btn-lg btn-primary btn-block" role="button">No account? Sign up</a>
 
 
@@ -57,7 +57,41 @@
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="js/ie10-viewport-bug-workaround.js"></script>
-    <script src="js/custom.js"></script>
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js" type="text/javascript"></script>
+    <script src="js/utils.js"></script>
+    <!--<script src="js/custom.js"></script>-->
+    <script type="text/javascript">
+      $('#SignInButton').click(function(event)
+      {
+        event.preventDefault();
+        var username = $('#inputUsername').val();
+        var password = $('#inputPassword').val();
+
+        $.get("api/loginUser?username=" + encodeURIComponent(username) + "&password=" + encodeURIComponent(password), function(data)
+          {
+            if (IsValidJSON(data))
+            {
+              console.log("Successful Login");
+            }
+            else
+            {
+              if (data == "WRONG_PASSWORD")
+              {
+                alert("Your password was incorrect. Please try again.");
+              }
+              else if (data == "WRONG_USERNAME")
+              {
+                alert("The user you entered does not exist. Please try again.");
+              }
+              else
+              {
+                alert("An unknown error occurred: " + data);                
+              }
+            }
+          }
+        );
+      });
+    </script>
 
   </body>
 </html>
