--- a/mainpage.html
+++ b/mainpage.html
@@ -89,7 +89,7 @@
                     <ul class="nav navbar-nav navbar-right">
                         <!-- <li class="active"><a href="myaccount.html">My Account <span class="sr-only">(current)</span></a></li> -->
                         <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Hello, name <span class="caret"></span></a>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Hello<span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li role="separator" class="divider"></li>
                                 <li><a href="index.html">Sign out</a></li>
