--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
               }
               else
               {
-                alert("An unknown error occurred: " + data);                
+                console.log("Successful Login");
+                window.location.href="mainpage.html";             
               }
             }
           }
