--- a/mainpage.html
+++ b/mainpage.html
@@ -112,7 +112,7 @@
                 <!-- Trigger the modal with a button -->
                 <div class="modeButton">
                     <p>
-                        <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#modalAdd">Add a reference</button>
+                        <button type="button" onClick="addRef()" class="btn btn-info btn-lg" data-toggle="modal" data-target="#modalAdd">Add a reference</button>
                         <a href="#myRefs" class="btn btn-info btn-lg" role="button">My references </a>
                         <a href="index.html" class="btn btn-info btn-lg" role="button">Sign out </a>
 
